--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <style>
       @font-face {
         font-family: 'APL386';
-        src: url('SAX2.ttf');
+        src: url('APL386.ttf');
       }
       * {
-        font-family: 'APL386 Unicode';
+        font-family: 'APL386';
         font-weight: unset;
       }
       h1>a {
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <h1>SAX2<sup style="font-size:50%"> <a href="SAX.ttf">download</a></sup><a href="https://github.com/sponsors/abrudz">♥</a></h1>
+    <h1>APL386 Unicode<sup style="font-size:50%"> <a href="APL386.ttf">download</a></sup><a href="https://github.com/sponsors/abrudz">♥</a></h1>
     <p>APL font based on Adrian Smith's <a href="https://apl385.com/fonts/index.htm">APL385</a> font with a fun, whimsical look, inspired by Comic Sans Serif.</p>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…⌂∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
