add source link to site

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         font-family: 'APL386';
         font-weight: unset;
       }
-      h1>a {
+      h1>span {
+        float: right;
+      }
+      h1>span>a {
         text-decoration: none;
         color: #ea4aaa;
-        float: right;
       }
       body {
         font-size: 125%;
@@ -25,10 +27,13 @@
         word-break: break-all;
         font-size: 125%;
       }
+      sup {
+        font-size: 50%;
+      }
     </style>
   </head>
   <body>
-    <h1>APL386 Unicode<sup style="font-size:50%"> <a href="APL386.ttf">download</a></sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></h1>
+    <h1>APL386 Unicode<sup> <a href="APL386.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/APL386">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
     <p>APL font based on Adrian Smith's <a href="https://apl385.com/fonts/index.htm">APL385</a> font with a fun, whimsical look, inspired by Comic Sans Serif.</p>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…&#x7f;∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
