--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         line-height: 1.2;
       }
       blockquote {
-        word-break: break-all;
+        -webkit-hyphens: auto;
+        -ms-hyphens: auto;
+        hyphens: auto;
+        text-align: justify;
         font-size: 125%;
       }
       sup {
