--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…&#x7f;∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
     <p>And many additional mathematical and typographical symbols:</p>
-    <blockquote>¦‖∫¬°±∓µ·∵¼½¾↔↕∉≉≣⊖⊛⊻⊼⊽⋔⌈⌉⌊⌋<br>`´¡¿‼‽¢£¤¥ © ® ºª«»‘’‚‛“”„‟§¶♀♂♔♕♖♗♘♙♚♛♜♝♞♟♠♡♢♣♤♥♦♧</blockquote>
-    <p>Singe and double line drawing characters, and blocks and shades:</p>
-    <blockquote>┌─┬┐ ╔═╦╗ ▁▂▃▄▅▆▇█<br>
-               │ ││ ║ ║║ █▉▊▋▌▍▎▏<br>
-               ├─┼┤ ╠═╬╣ ▌▀▄▐<br>
-               └─┴┘ ╚═╩╝ ░▒▓</blockquote>
+    <blockquote>¦‖∫¬°±∓µ·∵¼½¾↔↕∉≉≣⊖⊛⊻⊼⊽⋔⌈⌉⌊⌋⟦⟧⦅⦆∅<br>`´¡¿‼‽¢£¤¥ © ® ºª«»‘’‚‛“”„‟§¶♀♂♔♕♖♗♘♙♚♛♜♝♞♟♠♡♢♣♤♥♦♧</blockquote>
+    <p>Single, heavy and double line drawing characters, and blocks and shades:</p>
+    <blockquote>┌─┬┐ ┏━┳┓ ╔═╦╗ ▁▂▃▄▅▆▇█<br>
+                │ ││ ┃ ┃┃ ║ ║║ █▉▊▋▌▍▎▏<br>
+                ├─┼┤ ┣━╃┦ ╠═╬╣ ▌▀▄▐<br>
+                └─┴┘ ┗━┵┘ ╚═╩╝ ░▒▓</blockquote>
     <p>The full Unicode APL range, including both uppercase and lowercase underscored alphabets, and as-of-yet unused symbols:</p>
     <blockquote>ⒶⒷⒸⒹⒺⒻⒼⒽⒾⒿⓀⓁⓂⓃⓄⓅⓆⓇⓈⓉⓊⓋⓌⓍⓎⓏ<br>ⓐⓑⓒⓓⓔⓕⓖⓗⓘⓙⓚⓛⓜⓝⓞⓟⓠⓡⓢⓣⓤⓥⓦⓧⓨⓩ<br>⌻⌼⍁⍂⍃⍄⍅⍆⍊⍌⍍⍏⍑⍓⍔⍖⍘⍚⍯⍰</blockquote>
     <p>Extensive set of accented Latin letters:</p>
@@ -55,6 +55,8 @@
     <blockquote>Ά·ΈΉΊΌΎΏΐΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩΪΫάέήίΰαβγδεζηθικλμνξοπρςστυφχψωϊϋόύώϕϖϜϝϲϳϴϵ϶ϷϸϹϼϽϾϿ</blockquote>
     <p>And Cyrillic:</p>
     <blockquote>ЀЁЂЃЄЅІЇЈЌЍЎЏАБВГДЕЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдежзийклмнопрстуфхцчшщъыьэюяѐёѓєѕіїјў</blockquote>
+    <p>Support for BQN:</p>
+    <blockquote>+-×÷⋆√⌊⌈∧∨¬|=≠≤&lt;>≥≡≢⊣⊢⥊∾≍↑↓↕⌽⍉/⍋⍒⊏⊑⊐⊒∊⍷⊔ 𝕨𝕩𝔽𝔾𝕎𝕏𝕗𝕘𝕊ℝ⦃⦄⟨⟩<br>˜˘¨⌜⁼´` ∘⊸⟜○⌾⎉⚇⍟ π‿∞↩←→,⋄</blockquote>
     <p>Sample APL code:</p>
     <blockquote><pre>
 w←⊃(⊃0⍴⍵){                           ⍝┌┌─2─┐       monadic; use ↓
