--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>And Cyrillic:</p>
     <blockquote>ЀЁЂЃЄЅІЇЈЌЍЎЏАБВГДЕЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдежзийклмнопрстуфхцчшщъыьэюяѐёѓєѕіїјў</blockquote>
     <p>Support for BQN:</p>
-    <blockquote>+-×÷⋆√⌊⌈∧∨¬|=≠≤&lt;>≥≡≢⊣⊢⥊∾≍↑↓↕⌽⍉/⍋⍒⊏⊑⊐⊒∊⍷⊔ 𝕨𝕩𝔽𝔾𝕎𝕏𝕗𝕘𝕊ℝ⦃⦄⟨⟩<br>˜˘¨⌜⁼´` ∘⊸⟜○⌾⎉⚇⍟ π‿∞↩←→,⋄</blockquote>
+    <blockquote>+-×÷⋆√⌊⌈∧∨¬|=≠≤&lt;>≥≡≢⊣⊢⥊∾≍↑↓↕⌽⍉/⍋⍒⊏⊑⊐⊒∊⍷⊔<br>˜˘¨⌜⁼´` ∘⊸⟜○⌾⎉⚇⍟ π‿∞↩←→,⋄ 𝕨𝕩𝔽𝔾𝕎𝕏𝕗𝕘𝕊ℝ⦃⦄⟨⟩</blockquote>
     <p>Sample APL code:</p>
     <blockquote><pre>
 w←⊃(⊃0⍴⍵){                           ⍝┌┌─2─┐       monadic; use ↓
