--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…&#x7f;∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
     <p>And many additional mathematical and typographical symbols:</p>
     <blockquote>¦‖∫¬°±∓µ·∵¼½¾↔↕∉≉≣⊖⊛⊻⊼⊽⋔⌈⌉⌊⌋<br>`´¡¿‼‽¢£¤¥ © ® ºª«»‘’‚‛“”„‟§¶♀♂♔♕♖♗♘♙♚♛♜♝♞♟♠♡♢♣♤♥♦♧</blockquote>
-    <p>Singe and double line drawing characters, and blocks and shades:</p>
+    <p>Single and double line drawing characters, and blocks and shades:</p>
     <blockquote>┌─┬┐ ╔═╦╗ ▁▂▃▄▅▆▇█<br>
                │ ││ ║ ║║ █▉▊▋▌▍▎▏<br>
                ├─┼┤ ╠═╬╣ ▌▀▄▐<br>
