--- a/index.html
+++ b/index.html
@@ -33,11 +33,20 @@
       sup {
         font-size: 50%;
       }
+      textarea {
+        width: 100%;
+        resize: vertical;
+        min-height: 4em;
+        font-size: inherit;
+      }
     </style>
   </head>
   <body>
     <h1>APL386 Unicode<sup> <a href="APL386.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/APL386">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
     <p>APL font based on Adrian Smith's <a href="https://apl385.com/fonts/index.htm">APL385</a> font with a fun, whimsical look, inspired by Comic Sans Serif.</p>
+    <blockquote>
+      <textarea autofocus placeholder="Try it yourself ― type here!" spellcheck="false"></textarea>
+    </blockquote>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…&#x7f;∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
     <p>And many additional mathematical and typographical symbols:</p>
