--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <textarea autofocus placeholder="Try it yourself ― type here!" spellcheck="false"></textarea>
     </blockquote>
     <p>Supports every special character used by any APL implementation:</p>
-    <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…&#x7f;∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
+    <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∅∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…&#x7f;∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗∂λχ</blockquote>
     <p>And many additional mathematical and typographical symbols:</p>
     <blockquote>¦‖∫¬°±∓µ·∵¼½¾↔↕∉≉≣⊖⊛⊻⊼⊽⋔⌈⌉⌊⌋<br>`´¡¿‼‽¢£¤¥ © ® ºª«»‘’‚‛“”„‟§¶♀♂♔♕♖♗♘♙♚♛♜♝♞♟♠♡♢♣♤♥♦♧</blockquote>
     <p>Single and double line drawing characters, and blocks and shades:</p>
