fix link to css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" /> 
     <title>APL386 - APL385 Evolved</title>
     <link rel="shortcut icon" href="favicon.ico"/>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <input id="APL386" type="radio" name="f" value="APL386" checked=""><label for="APL386"> APL386</label>
