--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <tr><td>alphas</td><td>⍺⍶</td></tr>
 <tr><td>arrows-down</td><td>↓⍗⍖</td></tr>
 <tr><td>arrows-left</td><td>←⍇⍅</td></tr>
-<tr><td>arrows-right</td><td>→⍈⍆</td></tr>
+<tr><td>arrows-right</td><td>→⍈⍆➥</td></tr>
 <tr><td>arrows-up</td><td>↑⍐⍏</td></tr>
 <tr><td>asterisks</td><td>*⍣⍟⋆</td></tr>
 <tr><td>brackets</td><td>[]⌈⌊⌷</td></tr>
 <tr><td>circles</td><td>○⍥⍟⌽⍉⊖⍜⊙⌾∅</td></tr>
 <tr><td>colons</td><td>:⍠÷⌹</td></tr>
 <tr><td>commas</td><td>,⍪;⍮</td></tr>
-<tr><td>dashes</td><td>-+÷⌹⌿⍀⍪⍏⍖⊢⊣</td></tr>
+<tr><td>dashes</td><td>-+±÷⌹⌿⍀⍪⍏⍖⊢⊣</td></tr>
 <tr><td>dels</td><td>∇⍒⍫⍢</td></tr>
 <tr><td>deltas</td><td>∆⍙⍋⍍</td></tr>
 <tr><td>diamonds</td><td>⋄⌺⍚</td></tr>
@@ -36,9 +36,9 @@
 <tr><td>dots</td><td>.:,;?!⍰</td></tr>
 <tr><td>epsilons</td><td>∊⍷</td></tr>
 <tr><td>equals</td><td>=≠⌸⍯</td></tr>
-<tr><td>greeks</td><td>⍺⍶∆⍙∂∊⍷⍳⍸λπ⍴ϼχ</td></tr>
 <tr><td>iotas</td><td>⍳⍸</td></tr>
 <tr><td>jots</td><td>∘⍤⍛⍝⍎⍕¤⌾⟃⟄</td></tr>
+<tr><td>letters</td><td>⍺⍶∆⍙∂∊⍷⍳⍸λπ⍴ϼχ∫</td></tr>
 <tr><td>omegas</td><td>⍵⍹</td></tr>
 <tr><td>quads</td><td>⎕⌸⌹⌺⌻⌼⍁⍂⍃⍄⍇⍈⍌⍍⍐⍓⍯⍰</td></tr>
 <tr><td>shoes-down</td><td>∪⍦</td></tr>
@@ -58,7 +58,7 @@
 <tr><td>wedges-up</td><td>∧⍲⍓</td></tr></tbody></table>
     <p>And many additional mathematical, typographical, pictogram symbols:</p>
     <blockquote>
-      ¦‖∫¬°±∓µ·∵¼½¾↔↕∉≉≣⊖⊕⊖⊗⊘⊝⊛⊻⊼⊽⋔⌈⌉⌊⌋<br>
+      ¦‖¬°∓µ·∵¼½¾↔↕∉≉≣⊖⊕⊖⊗⊘⊝⊛⊻⊼⊽⋔⌈⌉⌊⌋<br>
       `´¡¿‼‽¢£¤¥ © ® ºª«»‘’‚‛“”„‟§¶<br>
       ♔♕♖♗♘♙♚♛♜♝♞♟♠♡♢♣♤♥♦♧♀♂
     </blockquote>
