--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <input id="APL386" type="radio" name="f" value="APL386" checked=""><label for="APL386"> APL386</label>
-    <input id="APL385" type="radio" name="f" value="APL385"            ><label for="APL385"> APL385 (select to compare)</label>
+    <input id="APL386n" class="x" type="radio" name="f" value="APL386n" checked=""><label class="x" for="APL386n"> APL386.otf (WIP)</label>
+    <input id="APL386" class="x" type="radio" name="f" value="APL386" checked=""><label class="x" for="APL386"> APL386.ttf</label>
+    <input id="APL385" class="x" type="radio" name="f" value="APL385"            ><label class="x" for="APL385"> APL385.ttf</label>
     <h1>APL386 Unicode<sup> <a href="APL386.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/APL386">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
     <p>Evolution of Adrian Smith's <a href="https://apl385.com/fonts/index.htm">APL385</a> font with a fun, whimsical look, inspired by Comic Sans Serif.</p>
     <blockquote>
