--- a/compare.html
+++ b/compare.html
@@ -21,6 +21,7 @@ blockquote {
   font-size: 125%;
   word-break: break-all;
 }
+pre{font-family:inherit}
 textarea {
   width: 100%;
   resize: vertical;
