use (updated) ttf

--- a/compare.html
+++ b/compare.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" /> 
     <title>APL386 Comparison</title>
     <style>
-@font-face {font-family: 'APL386';src: url('APL386.otf');}
+@font-face {font-family: 'APL386';src: url('APL386.ttf');}
 @font-face {font-family: 'APL385';src: url('APL385.ttf');}
 * {
   font-weight: unset;
