Revert to old APL385-based APL386

--- a/chars.html
+++ b/chars.html
@@ -4,7 +4,7 @@
     <title>Characters - APL385 vs new APL386</title>
     <style>
 @font-face {font-family: 'APL385';src: url('APL385.ttf');}
-@font-face {font-family: 'APL386';src: url('APL386.ttf');}
+@font-face {font-family: 'APL386';src: url('APL386.otf');}
 td{text-align:center;font-size:200}
 td:first-child{font-family:APL385}
 td:last-child{font-family:APL386}
